Zakladni struktura stranky

--- a/index-level2-tezsi.html
+++ b/index-level2-tezsi.html
@@ -11,10 +11,10 @@
 
         <h1>Náš tým</h1>
 
-
+        <div class="jarmila">
         <img src="images/zena1.jpg" alt="Jarmila">
         <h2>Jarmila Bloňďatá</h2>
-        <p>Kontrolu rybářský jiný čem noc vesuvu. V ho. Potravou ať dlouhou nízké v postupovali přemístí. </p>
+        <p>Kontrolu rybářský jiný čem noc<br> vesuvu. V ho. Potravou ať dlouhou<br> nízké v postupovali přemístí. </p></div>
 
 
         <img src="images/zena2.jpg" alt="Emílie">
