--- a/index-level2-tezsi.html
+++ b/index-level2-tezsi.html
@@ -11,24 +11,25 @@
 
         <h1>Náš tým</h1>
 
-        <div class="jarmila">
+        <div class="tym">
         <img src="images/zena1.jpg" alt="Jarmila">
         <h2>Jarmila Bloňďatá</h2>
         <p>Kontrolu rybářský jiný čem noc<br> vesuvu. V ho. Potravou ať dlouhou<br> nízké v postupovali přemístí. </p></div>
 
-
+        <div class="tym">
         <img src="images/zena2.jpg" alt="Emílie">
         <h2>Klotylda Usměvavá</h2>
-        <p>Z část, jde myotis i navrhovanou hladce soudy plavby k zdroj připomenou za vzhledem i vyhýbá žlutě.</p>
+        <p>Z část, jde myotis i navrhovanou<br> hladce soudy plavby k zdroj<br> připomenou za vzhledem i vyhýbá<br> žlutě.</p></div>
 
+        <div class="tym">
         <img src="images/zena3.jpg" alt="Klotylda">
         <h2>Lucie Krátkovlasá</h2>
-	    <p>Západních k dostává araby turistů s divný si jí potřebné i do bílá důležití přírody dáti.</p>
+	    <p>Západních k dostává araby turistů s divný si jí potřebné i do bílá důležití přírody dáti.</p></div>
 
-
+        <div class="tym">
         <img src="images/zena4.jpg" alt="Lucinda">
         <h2>Lucinda Usměvavá</h2>
-        <p>Kosila neznámý kluby desítek k jsem tj. rozdíl klidně budov vloni, ústní že mír vesnic kutuře novou.</p>
+        <p>Kosila neznámý kluby desítek k jsem tj. rozdíl klidně budov vloni, ústní že mír vesnic kutuře novou.</p></div>
 
 
     </body>
