--- a/index-level2-tezsi.html
+++ b/index-level2-tezsi.html
@@ -1,37 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Náš tým</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Náš tým</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
 
-    <div class="flexbox">
-    <h1>Náš tým</h1>
-    
-    
-        <div class="zena1">
-        <img src="images/zena1.jpg" alt="Jarmila">
-        <h2>Jarmila Bloňďatá</h2>
-        <p>Kontrolu rybářský jiný čem noc<br> vesuvu. V ho. Potravou ať dlouhou<br> nízké v postupovali přemístí. </p></div>
+      <h1>Náš tým</h1>
 
-        <div class="zena2">
-        <img src="images/zena2.jpg" alt="Emílie">
-        <h2>Klotylda Usměvavá</h2>
-        <p>Z část, jde myotis i navrhovanou<br> hladce soudy plavby k zdroj<br> připomenou za vzhledem i vyhýbá<br> žlutě.</p></div>
+<section class="flexbox">
+    <section class="kontejner1">
+      <div class="kontejner">
+          <div class="foto">
+             <img src="images/zena1.jpg" alt="Jarmila" />
+          </div>
+          <div class="zena">
+           <h2>Jarmila Bloňďatá</h2>
+           <p>
+            Kontrolu rybářský jiný čem noc
+            vesuvu. V ho. Potravou ať dlouhou
+            nízké v postupovali přemístí.
+           </p>
+          </div>
+      </div>
 
-        <div class="zena3">
-        <img src="images/zena3.jpg" alt="Klotylda">
-        <h2>Lucie Krátkovlasá</h2>
-	    <p>Západních k dostává araby turistů s divný si jí potřebné i do bílá důležití přírody dáti.</p></div>
+      <div class="kontejner">
+        <div class="foto">
+          <img src="images/zena2.jpg" alt="Emílie" />
+        </div>
+        <div class="zena">
+          <h2>Klotylda Usměvavá</h2>
+          <p>
+            Z část, jde myotis i navrhovanou
+            hladce soudy plavby k zdroj
+            připomenou za vzhledem i vyhýbá
+            žlutě.
+          </p>
+        </div>
+      </div>
+    </section>
 
-        <div class="zena4">
-        <img src="images/zena4.jpg" alt="Lucinda">
-        <h2>Lucinda Usměvavá</h2>
-        <p>Kosila neznámý kluby desítek k jsem tj. rozdíl klidně budov vloni, ústní že mír vesnic kutuře novou.</p></div>
+<section class="kontejner2">
+    <div class="kontejner">
+        <div class="foto">
+          <img src="images/zena3.jpg" alt="Klotylda" />
+        </div>
+        <div class="zena">
+          <h2>Lucie Krátkovlasá</h2>
+          <p>
+            Západních k dostává araby turistů s divný si jí potřebné i do bílá
+            důležití přírody dáti.
+          </p>
+        </div>
     </div>
 
-    </body>
+    <div class="kontejner">
+        <div class="foto">
+          <img src="images/zena4.jpg" alt="Lucinda" />
+        </div>
+        <div class="zena">
+          <h2>Lucinda Usměvavá</h2>
+          <p>
+              Kosila neznámý kluby desítek k jsem tj. rozdíl klidně budov vloni, ústní že mír vesnic kutuře novou.
+          </p>
+        </div>
+    </div>
+</section>
+</section>
+
+  </body>
 </html>
