--- a/index.html
+++ b/index.html
@@ -1,19 +1,72 @@
 <!DOCTYPE html>
-<html lang="cs">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Kontakty - rozcestník</title>
-	</head>
-	<body>
-		<h1>Kontakty - rozcestník</h1>
-		<ul>
-			<li>
-				<a href="index-level1-lehci.html">Lehčí (předpřipravené HTML)</a>
-			</li>
-			<li>
-				<a href="index-level2-tezsi.html">Těžší (dopiš HTML)</a>
-			</li>
-		</ul>
-	</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Náš tým</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  </head>
+
+      <h1>Náš tým</h1>
+
+<section class="flexbox">
+    
+      <div class="kontejner kontejner1">
+          <div class="foto">
+             <img src="images/zena1.jpg" alt="Jarmila" />
+          </div>
+          <div class="zena">
+           <h2>Jarmila Bloňďatá</h2>
+           <p>
+            Kontrolu rybářský jiný čem noc
+            vesuvu. V ho. Potravou ať dlouhou
+            nízké v postupovali přemístí.
+           </p>
+          </div>
+      </div>
+
+      <div class="kontejner kontejner2">
+        <div class="foto">
+          <img src="images/zena2.jpg" alt="Emílie" />
+        </div>
+        <div class="zena">
+          <h2>Klotylda Usměvavá</h2>
+          <p>
+            Z část, jde myotis i navrhovanou
+            hladce soudy plavby k zdroj
+            připomenou za vzhledem i vyhýbá
+            žlutě.
+          </p>
+        </div>
+      </div>
+   
+
+
+    <div class="kontejner kontejner3">
+        <div class="foto">
+          <img src="images/zena3.jpg" alt="Klotylda" />
+        </div>
+        <div class="zena">
+          <h2>Lucie Krátkovlasá</h2>
+          <p>
+            Západních k dostává araby turistů s divný si jí potřebné i do bílá
+            důležití přírody dáti.
+          </p>
+        </div>
+    </div>
+
+    <div class="kontejner kontejner4">
+        <div class="foto">
+          <img src="images/zena4.jpg" alt="Lucinda" />
+        </div>
+        <div class="zena">
+          <h2>Lucinda Usměvavá</h2>
+          <p>
+              Kosila neznámý kluby desítek k jsem tj. rozdíl klidně budov vloni, ústní že mír vesnic kutuře novou.
+          </p>
+        </div>
+    </div>
+</section>
+
+  </body>
 </html>
