--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <section class="flexbox">
     
-      <div class="kontejner kontejner1">
+      <div class="kontejner   ">
           <div class="foto">
              <img src="images/zena1.jpg" alt="Jarmila" />
           </div>
@@ -25,7 +25,7 @@
           </div>
       </div>
 
-      <div class="kontejner kontejner2">
+      <div class="kontejner">
         <div class="foto">
           <img src="images/zena2.jpg" alt="Emílie" />
         </div>
@@ -42,7 +42,7 @@
    
 
 
-    <div class="kontejner kontejner3">
+    <div class="kontejner">
         <div class="foto">
           <img src="images/zena3.jpg" alt="Klotylda" />
         </div>
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <div class="kontejner kontejner4">
+    <div class="kontejner">
         <div class="foto">
           <img src="images/zena4.jpg" alt="Lucinda" />
         </div>
